# pandoc-theorem

./: .gitignore  flake.nix  pandoc-thereom.cabal  stack.yaml
src/: Env.hs
test/: Spec.hs
