cabal-version: 2.4

name:                pandoc-theorem
version:             0.2.0
license:             BSD-3-Clause
author:              "Slim Lim"
maintainer:          "slim@sarahlim.com"
copyright:           "2019 Sarah Lim"
homepage:            "https://github.com/sliminality/pandoc-theorem"
extra-source-files:
    README.md
    ChangeLog.md
synopsis:            Write amsthm theorems using Pandoc Markdown
description:         See README.md for more details.
category:            Text

library
    exposed-modules:
        Env
    build-depends:
        base >=4.7 && <5,
        pandoc-types >=1.20,
        text,
        containers
    hs-source-dirs: src
    default-language: Haskell2010

executable pandoc-theorem-exe
    main-is: Main.hs
    hs-source-dirs: app
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
    build-depends:
        base >=4.7 && <5,
        pandoc-types >=1.20,
        text,
        containers,
        pandoc-theorem
    default-language: Haskell2010

-- test-suite pandoc-theorem-test
--    type: exitcode-stdio-1.0
--    main-is: Spec.hs
--    hs-source-dirs: test
--    ghc-options:
--        -threaded
--        -rtsopts
--        -with-rtsopts=-N
--    build-depends:
--        base >=4.7 && <5,
--        pandoc-theorem,
--        hspec
--    default-language: Haskell2010
